<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions_Page">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/test"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/correctText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/correctAnswer"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/correctCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/test"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrongText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wrong"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wrongCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/test"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/mainQuestion"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="370dp"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="440dp"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/finishButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/finish"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>